--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
             <footer class="footer">
                 <div class="content has-text-centered">
                     <p>
-                        &copy; @DateTime.Now.Year - MetricsApp - <a asp-page="/Privacy">Privacy</a>
+                        &copy; @DateTime.Now.Year - MetricsApp
                     </p>
                 </div>
             </footer>
